[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/HUD.gd" type="Script" id=1]
[ext_resource path="res://textures/barraVida.png" type="Texture" id=2]
[ext_resource path="res://textures/fonts/Kenney Pixel Square.ttf" type="DynamicFontData" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.419608, 0.0196078, 0.0196078, 1 )

[sub_resource type="StyleBoxFlat" id=2]
draw_center = false

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 3 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="BarraVida" type="ProgressBar" parent="."]
margin_left = 3.0
margin_top = 4.0
margin_right = 83.0
margin_bottom = 18.0
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
value = 100.0
percent_visible = false

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 3, 3 )
scale = Vector2( 0.69, 0.5 )
texture = ExtResource( 2 )
centered = false

[node name="Millores" type="CanvasLayer" parent="."]

[node name="mesVida" type="Button" parent="Millores"]
margin_left = 76.0
margin_top = 121.0
margin_right = 156.0
margin_bottom = 151.0
custom_colors/font_color = Color( 0.988235, 0.164706, 0.164706, 1 )
custom_fonts/font = SubResource( 3 )
text = "+1 VIDA"

[node name="mesVel" type="Button" parent="Millores"]
margin_left = 184.0
margin_top = 121.0
margin_right = 314.0
margin_bottom = 151.0
custom_colors/font_color = Color( 0.576471, 0.835294, 0.933333, 1 )
custom_fonts/font = SubResource( 3 )
text = "+ vELOCITAT"

[node name="mesDany" type="Button" parent="Millores"]
margin_left = 340.0
margin_top = 121.0
margin_right = 420.0
margin_bottom = 151.0
custom_colors/font_color = Color( 0.945098, 0.678431, 0.298039, 1 )
custom_fonts/font = SubResource( 3 )
text = "+ dany"

[node name="Label" type="Label" parent="Millores"]
margin_left = 141.0
margin_top = 71.0
margin_right = 347.0
margin_bottom = 95.0
custom_fonts/font = SubResource( 4 )
text = "ELEGEIX UNA MILLORA:"
align = 1

[connection signal="pressed" from="Millores/mesVida" to="." method="_on_mesVida_pressed"]
[connection signal="pressed" from="Millores/mesVel" to="." method="_on_mesVel_pressed"]
[connection signal="pressed" from="Millores/mesDany" to="." method="_on_mesDany_pressed"]
